# scheduler

./: .gitignore  CMakeLists.txt  README.md
demo/: demo.cpp
lib/libsched/: scheduler.h
lib/libsched/future/: future_result.h
lib/libsched/scheduler/: scheduler.h
lib/libsched/task/: task.h
lib/libsched/task_id/: task_id.h
lib/libsched/wrappers/: callable.h  callable_wrapper.h  executable.h
test/: libschedtest.cpp
